Updates from Overleaf

--- a/paper.bib
+++ b/paper.bib
@@ -18,7 +18,7 @@
 @article{ALICE:2014mas,
     author = "Abelev, Betty Bezverkhny and others",
     collaboration = "ALICE",
-    title = "{Multiplicity dependence of jet-like two-particle correlation structures in p\textendash{}Pb collisions at $\sqrt{s_{\rm NN}}$=5.02 TeV}",
+    title = "{Multiplicity dependence of jet-like two-particle correlation structures in p\textendash{}Pb collisions at $\sqrt{s_{\rm NN}}=5.02$ TeV}",
     eprint = "1406.5463",
     archivePrefix = "arXiv",
     primaryClass = "nucl-ex",
@@ -100,7 +100,7 @@
 	reportnumber = {CERN-EP-2021-006}
 }
 @article{Abelev:2014pua,
-	title        = {{Elliptic flow of identified hadrons in Pb-Pb collisions at $ \sqrt{s_{\mathrm{NN}}}=2.76 $ TeV}},
+	title        = {{Elliptic flow of identified hadrons in Pb--Pb collisions at $ \sqrt{s_{\rm{NN}}}=2.76 $ TeV}},
 	author       = {Abelev, Betty and others},
 	year         = 2015,
 	journal      = {JHEP},
@@ -115,7 +115,7 @@
 	slaccitation = {%%CITATION = ARXIV:1405.4632;%%}
 }
 @article{Abelev:2012di,
-	title        = {{Anisotropic flow of charged hadrons, pions and (anti-)protons measured at high transverse momentum in Pb-Pb collisions at $\sqrt{s_{\rm NN}}$=2.76 TeV}},
+	title        = {{Anisotropic flow of charged hadrons, pions and (anti-)protons measured at high transverse momentum in Pb--Pb collisions at $\sqrt{s_{\rm NN}}=2.76$ TeV}},
 	author       = {Abelev, Betty and others},
 	year         = 2013,
 	journal      = {Phys. Lett.},
@@ -222,16 +222,19 @@
 	primaryclass = {hep-ph}
 }
 @article{Parkkila:2021yha,
-	title        = {{New constraints for QCD matter from improved Bayesian parameter estimation in heavy-ion collisions at LHC}},
-	author       = {Parkkila, J. E. and Onnerstad, A. and Taghavi, S. F. and Mordasini, C. and Bilandzic, A. and Kim, D. J.},
-	year         = 2021,
-	month        = 11,
-	eprint       = {2111.08145},
-	archiveprefix = {arXiv},
-	primaryclass = {hep-ph}
+    author = "Parkkila, J. E. and Onnerstad, A. and Taghavi, S. F. and Mordasini, C. and Bilandzic, A. and Virta, M. and Kim, D. J.",
+    title = "{New constraints for QCD matter from improved Bayesian parameter estimation in heavy-ion collisions at LHC}",
+    eprint = "2111.08145",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    doi = "10.1016/j.physletb.2022.137485",
+    journal = "Phys. Lett. B",
+    volume = "835",
+    pages = "137485",
+    year = "2022"
 }
 @article{ALICE:2016kpq,
-	title        = {{Correlated event-by-event fluctuations of flow harmonics in Pb-Pb collisions at $\sqrt{s_{_{\rm NN}}}=2.76$ TeV}},
+	title        = {{Correlated event-by-event fluctuations of flow harmonics in Pb--Pb collisions at $\sqrt{s_{_{\rm NN}}}=2.76$ TeV}},
 	author       = {Adam, Jaroslav and others},
 	year         = 2016,
 	journal      = {Phys. Rev. Lett.},
@@ -246,7 +249,7 @@
 	slaccitation = {%%CITATION = ARXIV:1604.07663;%%}
 }
 @article{Acharya:2017gsw,
-	title        = {{Systematic studies of correlations between different order flow harmonics in Pb-Pb collisions at $\sqrt{s_{\rm NN}}$ = 2.76 TeV}},
+	title        = {{Systematic studies of correlations between different order flow harmonics in Pb--Pb collisions at $\sqrt{s_{\rm NN}} = 2.76$ TeV}},
 	author       = {Acharya, Shreyasi and others},
 	year         = 2018,
 	journal      = {Phys. Rev.},
@@ -262,7 +265,7 @@
 	slaccitation = {%%CITATION = ARXIV:1709.01127;%%}
 }
 @article{Acharya:2017zfg,
-	title        = {{Linear and non-linear flow modes in Pb-Pb collisions at $\sqrt{s_{\rm NN}} =$ 2.76 TeV}},
+	title        = {{Linear and non-linear flow modes in Pb--Pb collisions at $\sqrt{s_{\rm NN}} =$ 2.76 TeV}},
 	author       = {Acharya, Shreyasi and others},
 	year         = 2017,
 	journal      = {Phys. Lett. B},
@@ -276,7 +279,7 @@
 	reportnumber = {CERN-EP-2017-103}
 }
 @article{Acharya:2020taj,
-	title        = {{Higher harmonic non-linear flow modes of charged hadrons in Pb-Pb collisions at $\sqrt{s_{\rm{NN}}}$ = 5.02 TeV}},
+	title        = {{Higher harmonic non-linear flow modes of charged hadrons in Pb--Pb collisions at $\sqrt{s_{\rm{NN}}}$ = 5.02 TeV}},
 	author       = {Acharya, Shreyasi and others},
 	year         = 2020,
 	journal      = {JHEP},
@@ -290,7 +293,7 @@
 	reportnumber = {CERN-EP-2019-287}
 }
 @article{ALICE:2021klf,
-	title        = {{Multiharmonic Correlations of Different Flow Amplitudes in Pb-Pb Collisions at $\sqrt{s_{_{\rm NN}}}=2.76$\,\,TeV}},
+	title        = {{Multiharmonic Correlations of Different Flow Amplitudes in Pb--Pb Collisions at $\sqrt{s_{_{\rm NN}}}=2.76$\,\,TeV}},
 	author       = {Acharya, Shreyasi and others},
 	year         = 2021,
 	journal      = {Phys. Rev. Lett.},
@@ -358,7 +361,7 @@
 	reportnumber = {CMS-HIN-16-010, CERN-EP-2016-147}
 }
 @article{Acharya:2019vdf,
-	title        = {{Investigations of Anisotropic Flow Using Multiparticle Azimuthal Correlations in pp, p-Pb, Xe-Xe, and Pb-Pb Collisions at the LHC}},
+	title        = {{Investigations of Anisotropic Flow Using Multiparticle Azimuthal Correlations in pp, p--Pb, Xe-Xe, and Pb--Pb Collisions at the LHC}},
 	author       = {Acharya, Shreyasi and others},
 	year         = 2019,
 	journal      = {Phys. Rev. Lett.},
@@ -505,7 +508,7 @@
 	primaryclass = {nucl-th}
 }
 @article{Adam:2014qja,
-	title        = {{Centrality dependence of particle production in p-Pb collisions at $\sqrt{s_{\rm NN} }$= 5.02 TeV}},
+	title        = {{Centrality dependence of particle production in p--Pb collisions at $\sqrt{s_{\rm NN} }$= 5.02 TeV}},
 	author       = {Adam, Jaroslav and others},
 	year         = 2015,
 	journal      = {Phys. Rev. C},
@@ -520,7 +523,7 @@
 	reportnumber = {CERN-PH-EP-2014-281}
 }
 @article{Adam:2016jfp,
-	title        = {{Centrality dependence of charged jet production in p--Pb collisions at $\sqrt{s_\mathrm{NN}}$ = 5.02 TeV}},
+	title        = {{Centrality dependence of charged jet production in p--Pb collisions at $\sqrt{s_{\rm{NN}} = 5.02$ TeV}},
 	author       = {Adam, Jaroslav and others},
 	year         = 2016,
 	journal      = {Eur. Phys. J. C},
@@ -535,7 +538,7 @@
 	reportnumber = {CERN-EP-2016-052, ALICE-PUBLIC-2016-001}
 }
 @article{Acharya:2017okq,
-	title        = {{Constraints on jet quenching in p-Pb collisions at $\mathbf{\sqrt{s_{\rm NN}}}$ = 5.02 TeV measured by the event-activity dependence of semi-inclusive hadron-jet distributions}},
+	title        = {{Constraints on jet quenching in p--Pb collisions at $\sqrt{s_{\rm NN}}} = 5.02$ TeV measured by the event-activity dependence of semi-inclusive hadron-jet distributions}},
 	author       = {Acharya, Shreyasi and others},
 	year         = 2018,
 	journal      = {Phys. Lett. B},
@@ -549,7 +552,7 @@
 	reportnumber = {CERN-EP-2017-324}
 }
 @article{Adam:2016dau,
-	title        = {{Multiplicity dependence of charged pion, kaon, and (anti)proton production at large transverse momentum in p-Pb collisions at $\mathbf{\sqrt{{\textit s}_{\rm NN}}}$ = 5.02 TeV}},
+	title        = {{Multiplicity dependence of charged pion, kaon, and (anti)proton production at large transverse momentum in p--Pb collisions at $\mathbf{\sqrt{{\textit s}_{\rm NN}}}$ = 5.02 TeV}},
 	author       = {Adam, Jaroslav and others},
 	year         = 2016,
 	journal      = {Phys. Lett. B},
@@ -563,7 +566,7 @@
 	reportnumber = {CERN-EP-2016-003}
 }
 @article{Khachatryan:2016odn,
-	title        = {{Charged-particle nuclear modification factors in PbPb and pPb collisions at $ \sqrt{s_{\mathrm{N}\;\mathrm{N}}}=5.02 $ TeV}},
+	title        = {{Charged-particle nuclear modification factors in Pb--Pb and p--Pb collisions at $ \sqrt{s_{\mathrm{N}\;\mathrm{N}}}=5.02 $ TeV}},
 	author       = {Khachatryan, Vardan and others},
 	year         = 2017,
 	journal      = {JHEP},
@@ -577,7 +580,7 @@
 	reportnumber = {CMS-HIN-15-015, CERN-EP-2016-242}
 }
 @article{Frankfurt:2003td,
-	title        = {{Dijet production as a centrality trigger for $p p$ collisions at CERN LHC}},
+	title        = {{Dijet production as a centrality trigger for pp collisions at CERN LHC}},
 	author       = {Frankfurt, L. and Strikman, M. and Weiss, C.},
 	year         = 2004,
 	journal      = {Phys. Rev. D},
@@ -688,12 +691,14 @@
 	doi          = {10.1088/1748-0221/3/08/S08002},
 	collaboration = {ALICE}
 }
+
 @article{Brun:1994aa,
-	title        = {{GEANT Detector Description and Simulation Tool}},
-	author       = {Brun, René and Bruyant, F. and Carminati, Federico and Giani, Simone and Maire, M. and McPherson, A. and Patrick, G. and Urban, L.},
-	year         = 1994,
-	reportnumber = {CERN-W5013, CERN-W-5013, W5013, W-5013},
-	slaccitation = {%%CITATION = CERN-W5013;%%}
+    author = "Brun, Ren\'e and Bruyant, F. and Carminati, Federico and Giani, Simone and Maire, M. and McPherson, A. and Patrick, G. and Urban, L.",
+    title = "{GEANT Detector Description and Simulation Tool}",
+    reportNumber = "CERN-W5013, CERN-W-5013, W5013, W-5013",
+    doi = "10.17181/CERN.MUHF.DMJ1",
+    month = "10",
+    year = "1994"
 }
 @article{Abelev:2014ffa,
 	title        = {{Performance of the ALICE Experiment at the CERN LHC}},
@@ -756,7 +761,25 @@
       title         = "{ALICE luminosity determination for pp collisions at
                        $\sqrt{s}=13$ TeV}",
       year          = "2016",
+      reportNumber  = "ALICE-PUBLIC-2016-002",
       url           = "https://cds.cern.ch/record/2160174",
+}
+@article{ALICE-PUBLIC-2016-002,
+      title         = "{ALICE luminosity determination for pp collisions at $\sqrt{s_{\rm NN}} = 13$ TeV}",
+      collaboration = "ALICE",
+      month         = "Jun",
+      year          = "2016",
+      reportNumber  = "ALICE-PUBLIC-2016-002",
+      journal        = "ALICE-PUBLIC-2016-002",
+      url           = "http://cds.cern.ch/record/2160174",
+      author        = "J. Adam and others"
+}
+
+@article{ALICE:2016nst,
+    collaboration = "ALICE",
+    title = "{ALICE luminosity determination for pp collisions at $\sqrt{s}=13$ TeV}",
+    reportNumber = "ALICE-PUBLIC-2016-002",
+    year = "2016"
 }
 @article{Santoro2009:ALICESPD,
 	title        = {{The ALICE Silicon Pixel Detector: Readiness for the first proton beam}},
@@ -822,7 +845,7 @@
 	primaryclass = {nucl-th}
 }
 @article{Adam:2016tsv,
-	title        = {{Anomalous evolution of the near-side jet peak shape in Pb-Pb collisions at $\sqrt{s_{\rm NN}}$ = 2.76 TeV}},
+	title        = {{Anomalous evolution of the near-side jet peak shape in Pb--Pb collisions at $\sqrt{s_{\rm NN}} = 2.76$ TeV}},
 	author       = {Adam, Jaroslav and others},
 	year         = 2017,
 	journal      = {Phys. Rev. Lett.},
@@ -896,7 +919,7 @@
 	reportnumber = {CERN-PH-EP-2011-059, CMS-QCD-10-010}
 }
 @article{PHENIX:2006gto,
-	title        = {{Jet properties from dihadron correlations in $p^+ p$ collisions at $\sqrt{s}$ = 200-GeV}},
+	title        = {{Jet properties from dihadron correlations in p+p collisions at $\sqrt{s}$ = 200~GeV}},
 	author       = {Adler, S. S. and others},
 	year         = 2006,
 	journal      = {Phys. Rev. D},
@@ -923,7 +946,7 @@
 	reportnumber = {CERN-PH-EP-2015-251}
 }
 @article{ATLAS:2016yzd,
-	title        = {{Measurements of long-range azimuthal anisotropies and associated Fourier coefficients for $pp$ collisions at $\sqrt{s}=5.02$ and $13$ TeV and $p$+Pb collisions at $\sqrt{s_{\mathrm{NN}}}=5.02$ TeV with the ATLAS detector}},
+	title        = {{Measurements of long-range azimuthal anisotropies and associated Fourier coefficients for $pp$ collisions at $\sqrt{s}=5.02$ and $13$ TeV and $p$+Pb collisions at $\sqrt{s_{\rm NN}}=5.02$ TeV with the ATLAS detector}},
 	author       = {Aaboud, Morad and others},
 	year         = 2017,
 	journal      = {Phys. Rev. C},
@@ -952,7 +975,7 @@
 	reportnumber = {CERN-PH-EP-2012-359}
 }
 @article{ALICE:2013snk,
-	title        = {{Long-range angular correlations of $\rm \pi$, K and p in p-Pb collisions at $\sqrt{s_{\rm NN}}$ = 5.02 TeV}},
+	title        = {{Long-range angular correlations of $\rm \pi$, K and p in p--Pb collisions at $\sqrt{s_{\rm NN}} = 5.02$ TeV}},
 	author       = {Abelev, Betty Bezverkhny and others},
 	year         = 2013,
 	journal      = {Phys. Lett. B},
@@ -966,7 +989,7 @@
 	reportnumber = {CERN-PH-EP-2013-115}
 }
 @article{ALICE:2018yph,
-	title        = {{Anisotropic flow of identified particles in Pb-Pb collisions at $\sqrt{s_{\rm NN}}$=5.02 TeV}},
+	title        = {{Anisotropic flow of identified particles in Pb--Pb collisions at $\sqrt{s_{\rm NN}}=5.02$ TeV}},
 	author       = {Acharya, S. and others},
 	year         = 2018,
 	journal      = {JHEP},
@@ -1118,7 +1141,7 @@
 	reportnumber = {CMS-FSQ-12-022, CERN-PH-EP-2013-195}
 }
 @article{ATLAS:2012cix,
-	title        = {{Observation of Associated Near-Side and Away-Side Long-Range Correlations in $\sqrt{s_{\rm NN}}$=5.02  TeV Proton-Lead Collisions with the ATLAS Detector}},
+	title        = {{Observation of Associated Near-Side and Away-Side Long-Range Correlations in $\sqrt{s_{\rm NN}}=5.02$ TeV Proton-Lead Collisions with the ATLAS Detector}},
 	author       = {Aad, Georges and others},
 	year         = 2013,
 	journal      = {Phys. Rev. Lett.},
@@ -1148,7 +1171,7 @@
 	reportnumber = {CERN-PH-EP-2014-201}
 }
 @article{ALICE:2018vuu,
-	title        = {{Transverse momentum spectra and nuclear modification factors of charged particles in pp, p-Pb and Pb-Pb collisions at the LHC}},
+	title        = {{Transverse momentum spectra and nuclear modification factors of charged particles in pp, p--Pb and Pb--Pb collisions at the LHC}},
 	author       = {Acharya, S. and others},
 	year         = 2018,
 	journal      = {JHEP},
@@ -1162,7 +1185,7 @@
 	reportnumber = {CERN-EP-2018-025}
 }
 @article{Moreland:2018gsh,
-	title        = {{Bayesian calibration of a hybrid nuclear collision model using p-Pb and Pb-Pb data at energies available at the CERN Large Hadron Collider}},
+	title        = {{Bayesian calibration of a hybrid nuclear collision model using p--Pb and Pb--Pb data at energies available at the CERN Large Hadron Collider}},
 	author       = {Moreland, J. Scott and Bernhard, Jonah E. and Bass, Steffen A.},
 	year         = 2020,
 	journal      = {Phys. Rev. C},
@@ -1317,7 +1340,7 @@
 	reportnumber = {INT-PUB-10-031}
 }
 @article{ALICE:2013mez,
-	title        = {{Centrality dependence of $\pi$, K, p production in Pb-Pb collisions at $\sqrt{s_{\rm NN}}$ = 2.76 TeV}},
+	title        = {{Centrality dependence of $\pi$, K, p production in Pb--Pb collisions at $\sqrt{s_{\rm NN}} = 2.76$ TeV}},
 	author       = {Abelev, Betty and others},
 	year         = 2013,
 	journal      = {Phys. Rev. C},
@@ -1331,7 +1354,7 @@
 	reportnumber = {CERN-PH-EP-2013-019}
 }
 @article{ALICE:2011ab,
-	title        = {{Higher harmonic anisotropic flow measurements of charged particles in Pb-Pb collisions at $\sqrt{s_{\rm NN}}$=2.76 TeV}},
+	title        = {{Higher harmonic anisotropic flow measurements of charged particles in Pb--Pb collisions at $\sqrt{s_{\rm NN}}=2.76$ TeV}},
 	author       = {Aamodt, K. and others},
 	year         = 2011,
 	journal      = {Phys. Rev. Lett.},
@@ -1395,7 +1418,7 @@
 	primaryclass = {hep-ph}
 }
 @article{ALICE:2018hza,
-	title        = {{Transverse momentum spectra and nuclear modification factors of charged particles in Xe-Xe collisions at $\sqrt{s_{\rm NN}}$ = 5.44 TeV}},
+	title        = {{Transverse momentum spectra and nuclear modification factors of charged particles in Xe-Xe collisions at $\sqrt{s_{\rm NN}} = 5.44$ TeV}},
 	author       = {Acharya, Shreyasi and others},
 	year         = 2019,
 	journal      = {Phys. Lett. B},
@@ -1410,7 +1433,7 @@
 }
 @article{Ji:2023eqn,
     author = "Ji, S. and Virta, M. and Kallio, T. and Lim, S. H and Kim, D. J.",
-    title = "{Toward an unbiased flow measurements in LHC $pp$ collisions}",
+    title = "{Toward an unbiased flow measurements in LHC pp collisions}",
     eprint = "2303.05806",
     archivePrefix = "arXiv",
     primaryClass = "hep-ph",
@@ -1429,8 +1452,20 @@
   doi = {10.1103/PhysRevD.65.092002},
 }
 
+@article{CDF:2001onq,
+    author = "Affolder, T. and others",
+    collaboration = "CDF",
+    title = "{Charged Jet Evolution and the Underlying Event in $p\bar{p}$ Collisions at 1.8 TeV}",
+    reportNumber = "FERMILAB-PUB-01-211-E",
+    doi = "10.1103/PhysRevD.65.092002",
+    journal = "Phys. Rev. D",
+    volume = "65",
+    pages = "092002",
+    year = "2002"
+}
+
 @article{Aad:2011fc,
-  title = {Measurement of the inclusive jet cross-section in proton-proton collisions at $\sqrt{s}$=7 TeV using 4.5 fb-1 of data with the ATLAS detector},
+  title = {{Measurement of the inclusive jet cross-section in proton-proton collisions at $\sqrt{s}$=7 TeV using 4.5 fb-1 of data with the ATLAS detector}},
   author = {{ATLAS Collaboration}},
   journal = {Journal of High Energy Physics},
   volume = {2011},
@@ -1440,8 +1475,24 @@
   doi = {10.1007/JHEP09(2011)035},
 }
 
+@article{ATLAS:2014riz,
+    author = "Aad, Georges and others",
+    collaboration = "ATLAS",
+    title = "{Measurement of the inclusive jet cross-section in proton-proton collisions at $ \sqrt{s}=7 $ TeV using 4.5 fb$^{−1}$ of data with the ATLAS detector}",
+    eprint = "1410.8857",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ex",
+    reportNumber = "CERN-PH-EP-2014-155",
+    doi = "10.1007/JHEP02(2015)153",
+    journal = "JHEP",
+    volume = "02",
+    pages = "153",
+    year = "2015",
+    note = "[Erratum: JHEP 09, 141 (2015)]"
+}
+
 @article{Khachatryan:2014waa,
-  title = {Measurement of the inclusive jet cross section in pp collisions at $\sqrt{s}$=2.76 TeV},
+  title = {{Measurement of the inclusive jet cross section in pp collisions at $\sqrt{s}$=2.76 TeV}},
   author = {{CMS Collaboration}},
   journal = {Journal of High Energy Physics},
   volume = {2014},
@@ -1450,11 +1501,26 @@
   year = {2014},
   doi = {10.1007/JHEP11(2014)204},
 }
+@article{CMS:2015jdl,
+    author = "Khachatryan, Vardan and others",
+    collaboration = "CMS",
+    title = "{Measurement of the inclusive jet cross section in pp collisions at $\sqrt{s} = 2.76\,\text {TeV}$}",
+    eprint = "1512.06212",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ex",
+    reportNumber = "CMS-SMP-14-017, CERN-PH-EP-2015-299",
+    doi = "10.1140/epjc/s10052-016-4083-z",
+    journal = "Eur. Phys. J. C",
+    volume = "76",
+    number = "5",
+    pages = "265",
+    year = "2016"
+}
 
 @article{ALICE:2021ptz,
     author = "Acharya, Shreyasi and others",
     collaboration = "ALICE",
-    title = "{Production of K$^{*}(892)^{0}$ and $\phi(1020)$ in pp and Pb-Pb collisions at $\sqrt{s_{\rm NN}} = 5.02$ TeV}",
+    title = "{Production of K$^{*}(892)^{0}$ and $\phi(1020)$ in pp and Pb--Pb collisions at $\sqrt{s_{\rm NN}} = 5.02$ TeV}",
     eprint = "2106.13113",
     archivePrefix = "arXiv",
     primaryClass = "nucl-ex",
@@ -1484,7 +1550,7 @@
 @article{ALICE:2016tlx,
     author = "Adam, Jaroslav and others",
     collaboration = "ALICE",
-    title = "{Pseudorapidity dependence of the anisotropic flow of charged particles in Pb-Pb collisions at $\sqrt{s_{\rm NN}}=2.76$ TeV}",
+    title = "{Pseudorapidity dependence of the anisotropic flow of charged particles in Pb--Pb collisions at $\sqrt{s_{\rm NN}}=2.76$ TeV}",
     eprint = "1605.02035",
     archivePrefix = "arXiv",
     primaryClass = "nucl-ex",
@@ -1516,7 +1582,7 @@
 	keywords = {ALICE, correlations, pp, MPI, event activity, multiplicity},
 	note = {The 26th International Conference on Ultra-relativistic Nucleus-Nucleus Collisions: Quark Matter 2017},
 	pages = {329-332},
-	title = {Multiplicity dependence of jet-like two-particle correlations in pp collisions at s=7 and 13 TeV with ALICE},
+	title = {Multiplicity dependence of jet-like two-particle correlations in pp collisions at $\sqrt{s}=$7 and 13 TeV with ALICE},
 	url = {https://www.sciencedirect.com/science/article/pii/S0375947417301422},
 	volume = {967},
 	year = {2017},
@@ -1563,4 +1629,69 @@
       title         = "{The ALICE definition of primary particles}",
       year          = "2017",
       url           = "https://cds.cern.ch/record/2270008",
+}
+
+@article{ALICE:2022wpn,
+    collaboration = "ALICE",
+    title = "{The ALICE experiment -- A journey through QCD}",
+    eprint = "2211.04384",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-ex",
+    reportNumber = "CERN-EP-2022-227",
+    month = "11",
+    year = "2022"
+}
+
+
+@article{Skands:2014pea,
+    author = "Skands, Peter and Carrazza, Stefano and Rojo, Juan",
+    title = "{Tuning PYTHIA 8.1: the Monash 2013 Tune}",
+    eprint = "1404.5630",
+    archivePrefix = "arXiv",
+    primaryClass = "hep-ph",
+    reportNumber = "CERN-PH-TH-2014-069, MCNET-14-08, OUTP-14-05P",
+    doi = "10.1140/epjc/s10052-014-3024-y",
+    journal = "Eur. Phys. J. C",
+    volume = "74",
+    number = "8",
+    pages = "3024",
+    year = "2014"
+}
+
+@article{ALICE:2013nwm,
+    author = "Abelev, B and others",
+    collaboration = "ALICE",
+    title = "{Technical Design Report for the Upgrade of the ALICE Inner Tracking System}",
+    reportNumber = "CERN-LHCC-2013-024, ALICE-TDR-017",
+    doi = "10.1088/0954-3899/41/8/087002",
+    journal = "J. Phys. G",
+    volume = "41",
+    pages = "087002",
+    year = "2014"
+}
+@article{ALICE:2020swj,
+    author = "Acharya, Shreyasi and others",
+    collaboration = "ALICE",
+    title = "{Pseudorapidity distributions of charged particles as a function of mid- and forward rapidity multiplicities in pp collisions at $\sqrt{s}$~=~5.02, 7 and 13 TeV}",
+    eprint = "2009.09434",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-ex",
+    reportNumber = "CERN-EP-2020-170",
+    doi = "10.1140/epjc/s10052-021-09349-5",
+    journal = "Eur. Phys. J. C",
+    volume = "81",
+    number = "7",
+    pages = "630",
+    year = "2021"
+}
+
+@article{Ivanov:2006yra,
+    author = "Ivanov, M. and Belikov, I. and Hristov, P. and Safarik, K.",
+    editor = "Bernhard, R. and Gassner, J. and Lehner, F. and Needham, M. and Steinkamp, O. and Straumann, U. and Vollhardt, A.",
+    title = "{Track reconstruction in high density environment}",
+    doi = "10.1016/j.nima.2006.05.029",
+    journal = "Nucl. Instrum. Meth. A",
+    volume = "566",
+    pages = "70--74",
+    year = "2006"
 }
