--- a/paper.tex
+++ b/paper.tex
@@ -12,6 +12,7 @@
 \usepackage {units}
 \usepackage {array}
 \usepackage{verbatim}
+\usepackage{dblfloatfix} % for fixing tables at certain places of the page
 
 %\usepackage[dvipsnames]{xcolor}
 \linenumbers
@@ -38,8 +39,16 @@
 
 \begin{abstract}
 %\input{abstract.tex}
-Long- and short-range correlations for pairs of charged particles with two-particle angular correlations are studied in pp collisions at ${\sqrt{{\textit s}}}=13$~TeV and p--Pb collisions at ${\sqrt{s_\mathrm{NN}}} = 5.02$~TeV. The correlation functions are measured as functions of relative azimuthal angle $\Delta\varphi$ and pseudorapidity separation $\Delta\eta$ for pairs of primary charged particles within the pseudorapidity interval $|\eta| < 0.9$ and the transverse-momentum interval 1~$ < \pt < $~4~GeV/$c$.
-Flow coefficients are extracted for the long-range correlations ($1.6 < |\Delta\eta| <1.8$) in various high-multiplicity event classes using the low-multiplicity template fit method. The method allows to subtract the enhanced away-side jet fragments in high-multiplicity events with respect to low-multiplicity events. Furthermore, it is free from systematic biases originating from non-flow effects. These results show decreasing flow signal toward lower multiplicity events. Furthermore, the flow coefficients for events with hard probes, such as jets or leading particles, do not exhibit any significant changes. The results are compared to hydrodynamic model calculations and it is found that a better understanding of the initial conditions is necessary to describe the results, particularly for low-multiplicity events, where applicable.
+Long- and short-range correlations for pairs of charged particles with two-particle angular correlations are studied in pp collisions at ${\sqrt{{\textit s}}}=13$~TeV and p--Pb collisions at ${\sqrt{s_\mathrm{NN}}} = 5.02$~TeV. The correlation functions are measured as a function of relative azimuthal angle $\Delta\varphi$ and pseudorapidity separation $\Delta\eta$ for pairs of primary charged particles within the pseudorapidity interval $|\eta| < 0.9$ and the transverse-momentum interval 1~$ < \pt < $~4~GeV/$c$.
+Flow coefficients are extracted for the long-range correlations ($1.6 < |\Delta\eta| <1.8$) in various high-multiplicity event classes using the low-multiplicity template fit method. 
+The method is used to subtract the enhanced yield of away-side jet fragments in high-multiplicity events.
+%The method allows the subtraction of the enhanced away-side jet fragments in high-multiplicity events with respect to low-multiplicity events. 
+%Furthermore, it is free from systematic biases originating from non-flow effects. 
+These results show decreasing flow signals toward lower multiplicity events.
+%The obtained results show that the flow signal decreases with decreasing charged-particle multiplicity.
+%Furthermore, the flow coefficients for events with hard probes, such as jets or leading particles, do not exhibit any significant changes. 
+Furthermore, the flow coefficients for events with hard probes, such as jets or leading particles, do not exhibit any significant changes compared to those obtained from high-multiplicity events without any specific event selection criteria.
+The results are compared to hydrodynamic-model calculations, and it is found that a better understanding of the initial conditions is necessary to describe the results, particularly for low-multiplicity events.
 
 
 
