--- a/sec_summary.tex
+++ b/sec_summary.tex
@@ -2,12 +2,11 @@
 
 \section{Conclusions}
 \label{sec:summary}
-Long-range angular correlations for pairs of charged particles are studied in pp at ${\sqrt{{\textit s}}}=13$~TeV and in p--Pb collisions at $\sqrt{s_\mathrm{NN}} = 5.02$~TeV. Flow coefficients are extracted from long-range correlations ($\Delta\eta > 1.6$) for a broad range of multiplicity event classes using the template method, which allows one to subtract the enhanced away-side jet fragmentation yields in high-multiplicity events with respect to low-multiplicity events. The method we used to measure flow coefficients within our kinematic ranges has been verified within a systematic uncertainty range of 1\% for $v_{2}$ and 3--8\% for $v_{3}$. This is due to the different away-side jet peak shapes in high- and low-multiplicity events. However, it is important to check the systematics when analyzing different kinematic ranges, as the effect may not always be negligible.
-These $p_\mathrm{T}$ dependent results are consistent with ATLAS, and $v_n$ becomes larger for higher $p_\mathrm{T}$, and maximum of $v_n$ is reached at $2.5<p_\mathrm{T}<3.0$ GeV/$c$. 
-The measurement of $v_2$ as a function of charged particle multiplicity $N_{\mathrm{ch}}$ in $|\eta|<0.5$ shows a weak multiplicity dependence on $v_2$ both for pp and p--Pb collisions and tends to decrease toward the lower multiplicities. The results in pp collisions reveal a hint of a disappearing $v_2$ signal below $N_{\mathrm{ch}} = 10$. However, the statistical precision of the data is limited, so we cannot definitively exclude the possibility of a complete disappearance of the $v_2$ signal below this threshold. 
+Long-range angular correlations for pairs of charged particles are studied in pp collisions at ${\sqrt{{\textit s}}}=13$~TeV and in p--Pb collisions at $\sqrt{s_\mathrm{NN}} = 5.02$~TeV. Flow coefficients are extracted from long-range correlations ($|\Delta\eta| > 1.6$) for a broad range of charge-particle-multiplicity event classes using the template method, which allows one to subtract the enhanced away-side jet fragmentation yields in high-multiplicity events with respect to low-multiplicity events. The method that was used to measure flow coefficients within our kinematic ranges has been verified within the related systematic uncertainty interval of 1\% for $v_{2}$ and 3--8\% for $v_{3}$. These uncertainties reflect the possible differences in the away-side jet peak shapes in high- and low-multiplicity events. However, it is important to check the systematics when analyzing different kinematic ranges, as the effect may not always be negligible.
+The obtained $v_2$ and $v_3$ $p_\mathrm{T}$ dependent results are consistent with those of ATLAS, with $v_n$ increasing with $p_\mathrm{T}$ and reaching a maximum at at $2.5<p_\mathrm{T}<3.0$ GeV/$c$. 
+The measurement of $v_2$ as a function of charged particle multiplicity $N_{\mathrm{ch}}$ in $|\eta|<0.5$ shows a weak multiplicity dependence both for pp and p--Pb collisions and tends to decrease toward lower multiplicities. In pp collisions the results reveal a hint of a disappearing $v_2$ signal below $N_{\mathrm{ch}} = 10$. However, it cannot be definitively excluded whether there is a complete disappearance of the $v_2$ signal below this threshold due to the limited statistical precision of the data.
 The comparisons to viscous hydrodynamic models show that the magnitudes of $v_2$ and their multiplicity dependence are not described by state-of-art hydrodynamic calculations with two initial state models, especially for low-multiplicity p--Pb and pp collisions. As initial state effects tend to be more important at low multiplicity~\cite{Greif:2017bnr,Moreland:2018gsh}, these results may help to constrain the modeling of the initial state.
 %the inclusion of nucleon substructure and the large difference in the preferred pre-equilibrium :Moreland:2018gsh
 %free-streaming time determined by the two studies
-Furthermore, the events with hard probes such as jets or leading particles do not show any changes both in $v_2$ and $v_3$ within the uncertainties which implies that the long-range correlation involving soft particles is not significantly changed by the presence of a hard-scattering process. 
-Even though it would be interesting to compare these results to EPOS LHC~\cite{Pierog:2013ria} and PYTHIA8 String Shoving models~\cite{Bierlich:2017vhg,Bierlich:2019ixq} as done in \cite{ALICE:2012eyl} for the ridge yields, it is not possible to reliably extract flow coefficients because these models exhibit flow or ridge signals in low-multiplicity events, thus making the use of a low-multiplicity template unfeasible~\cite{Ji:2023eqn}.
+Furthermore, the events with hard probes such as jets or leading particles do not show any changes both in $v_2$ and $v_3$ within the uncertainties, which implies that the long-range correlation involving soft particles is not significantly changed by the presence of a hard-scattering process. Even though it would be interesting to compare these results to the EPOS LHC~\cite{Pierog:2013ria} and PYTHIA8 String Shoving models~\cite{Bierlich:2017vhg,Bierlich:2019ixq} as done in Ref.~\cite{ALICE:2012eyl} for the ridge yields, it is not possible to reliably extract the flow coefficients because these models exhibit flow or ridge signals in low-multiplicity events, thus making the use of the low-multiplicity template unfeasible~\cite{Ji:2023eqn}.
 
