--- a/paper.bib
+++ b/paper.bib
@@ -234,7 +234,7 @@
     year = "2022"
 }
 @article{ALICE:2016kpq,
-	title        = {{Correlated event-by-event fluctuations of flow harmonics in Pb--Pb collisions at $\sqrt{s_{_{\rm NN}}}=2.76$ TeV}},
+	title        = {{Correlated event-by-event fluctuations of flow harmonics in Pb--Pb collisions at $\sqrt{s_{\rm NN}}=2.76$ TeV}},
 	author       = {Adam, Jaroslav and others},
 	year         = 2016,
 	journal      = {Phys. Rev. Lett.},
@@ -523,7 +523,7 @@
 	reportnumber = {CERN-PH-EP-2014-281}
 }
 @article{Adam:2016jfp,
-	title        = {{Centrality dependence of charged jet production in p--Pb collisions at $\sqrt{s_{\rm{NN}} = 5.02$ TeV}},
+	title        = {{Centrality dependence of charged jet production in p--Pb collisions at $\sqrt{s_{\rm{NN}}} = 5.02$ TeV}},
 	author       = {Adam, Jaroslav and others},
 	year         = 2016,
 	journal      = {Eur. Phys. J. C},
@@ -538,7 +538,7 @@
 	reportnumber = {CERN-EP-2016-052, ALICE-PUBLIC-2016-001}
 }
 @article{Acharya:2017okq,
-	title        = {{Constraints on jet quenching in p--Pb collisions at $\sqrt{s_{\rm NN}}} = 5.02$ TeV measured by the event-activity dependence of semi-inclusive hadron-jet distributions}},
+	title        = {{Constraints on jet quenching in p--Pb collisions at $\sqrt{s_{\rm NN}} = 5.02$ TeV measured by the event-activity dependence of semi-inclusive hadron-jet distributions}},
 	author       = {Acharya, Shreyasi and others},
 	year         = 2018,
 	journal      = {Phys. Lett. B},
@@ -1464,21 +1464,10 @@
     year = "2002"
 }
 
-@article{Aad:2011fc,
-  title = {{Measurement of the inclusive jet cross-section in proton-proton collisions at $\sqrt{s}$=7 TeV using 4.5 fb-1 of data with the ATLAS detector}},
-  author = {{ATLAS Collaboration}},
-  journal = {Journal of High Energy Physics},
-  volume = {2011},
-  number = {7},
-  pages = {63},
-  year = {2011},
-  doi = {10.1007/JHEP09(2011)035},
-}
-
 @article{ATLAS:2014riz,
     author = "Aad, Georges and others",
     collaboration = "ATLAS",
-    title = "{Measurement of the inclusive jet cross-section in proton-proton collisions at $ \sqrt{s}=7 $ TeV using 4.5 fb$^{−1}$ of data with the ATLAS detector}",
+    title = "{Measurement of the inclusive jet cross-section in proton-proton collisions at $ \sqrt{s}=7 $ TeV using 4.5 $\mathrm{fb}^{-1}$ of data with the ATLAS detector}",
     eprint = "1410.8857",
     archivePrefix = "arXiv",
     primaryClass = "hep-ex",
