Updates from Overleaf

--- a/paper.bib
+++ b/paper.bib
@@ -16,7 +16,7 @@
     year = "2013"
 }
 @article{ALICE:2014mas,
-    author = "Abelev, Betty Bezverkhny and others",
+    author = "Abelev, Betty and others",
     collaboration = "ALICE",
     title = "{Multiplicity dependence of jet-like two-particle correlation structures in p\textendash{}Pb collisions at $\sqrt{s_{\rm NN}}=5.02$ TeV}",
     eprint = "1406.5463",
@@ -702,7 +702,7 @@
 }
 @article{Abelev:2014ffa,
 	title        = {{Performance of the ALICE Experiment at the CERN LHC}},
-	author       = {Abelev, Betty Bezverkhny and others},
+	author       = {Abelev, Betty and others},
 	year         = 2014,
 	journal      = {Int. J. Mod. Phys.},
 	volume       = {A29},
@@ -976,7 +976,7 @@
 }
 @article{ALICE:2013snk,
 	title        = {{Long-range angular correlations of $\rm \pi$, K and p in p--Pb collisions at $\sqrt{s_{\rm NN}} = 5.02$ TeV}},
-	author       = {Abelev, Betty Bezverkhny and others},
+	author       = {Abelev, Betty and others},
 	year         = 2013,
 	journal      = {Phys. Lett. B},
 	volume       = 726,
@@ -1683,4 +1683,18 @@
     volume = "566",
     pages = "70--74",
     year = "2006"
+}
+@article{ALICE:2022fnb,
+    author = "Acharya, S. and others",
+    collaboration = "ALICE",
+    title = "{Underlying-event properties in pp and p\textendash{}Pb collisions at $ \sqrt{s_{\textrm{NN}}} $ = 5.02 TeV}",
+    eprint = "2204.10389",
+    archivePrefix = "arXiv",
+    primaryClass = "nucl-ex",
+    reportNumber = "CERN-EP-2022-041",
+    doi = "10.1007/JHEP06(2023)023",
+    journal = "JHEP",
+    volume = "06",
+    pages = "023",
+    year = "2023"
 }
