--- a/sec_ana.tex
+++ b/sec_ana.tex
@@ -169,7 +169,7 @@ The flow coefficients, $v_{n}$, of the trigger particles, can be extracted from 
 v_{n}(p_{\rm{T,trig}}) = v_{n,n}(p_{\rm{T,trig}}, p_{\rm{T,assoc}}) / \sqrt{ v_{n,n}(p_{\rm{T,assoc}},p_{\rm{T,assoc}})},
 \end{eqnarray}
 where $v_{n,n}(p_{\rm{T,assoc}}, p_{\rm{T,assoc}})$ are measured in 1~$<p_{\rm{T,trig}}<$~4~GeV/$c$ interval as the $p_{\rm{T,assoc}}$ range is fixed with 1~$<p_{\rm{T,assoc}}<$~4~GeV/$c$. In the following sections, unless explicitly stated otherwise, $v_n$ will refer to $v_n(p_{\rm{T,trig}})$.
-Different event scale selections were investigated by selecting events that include a hard jet or a high-$\pt$ leading particle in mid-rapidity.
+Different event scale selections were investigated by selecting events that include a hard jet or a high-$\pt$ leading particle in mid-rapidity (i.e., the highest reconstructed $\pt$ inside the acceptance region in an event).
 %It is possible to study the impact parameter dependence of flow coefficients in pp collisions~\cite{Sjostrand:1986ep,Frankfurt:2010ea}.
 This event scale was set by requiring a minimum $\pt$ of the leading track ($\ptlead$) or the reconstructed jet ($\ptjet$) at midrapidity~\cite{ALICE:2021nir}. The leading particle track was required to be within $|\eta|<0.9$ and $0<\varphi<2\pi$, and the jets were reconstructed with the anti-$k_{\rm{T}}$ algorithm~\cite{Cacciari:2008gp,Cacciari:2011ma}, with $R=0.4$ using charged particles only. Jet constituents were combined using the boost-invariant $\pt$ recombination scheme. The jets are selected in the full azimuth ($0<\varphi<2\pi$)and their pseudorapidity is constrained to $|\eta_\mathrm{jet}|<0.4$. The $\pt$ of jets $\ptjet$ is corrected for the underlying event density that is measured using the $k_{\rm{T}}$ algorithm with $R=$~0.2 following the procedure described in Ref.~\cite{Acharya:2018eat}.
 
