--- a/sec_intro.tex
+++ b/sec_intro.tex
@@ -32,7 +32,7 @@ By using the template-fit method, the yield of away-side jet fragments can be su
 %This template fit method allows one to subtract the enhanced away-side jet fragments which are estimated from low-multiplicity events, as long as the jet shape is not heavily modified between the template and in the target multiplicity. The previously ignored possible effect driven by the minor observed modification will be quantified.
 %This template fit method allows one to subtract the enhanced away-side jet fragments in high-multiplicity with respect to low-multiplicity events, possibly testing a lower limit of event multiplicity on the flow signal.
 
-As an extension of the studies of the near-side long-range ridge and jet-fragmentation yields in pp collisions at the center-of-mass energy $\sqrt{s}=13$ TeV~\cite{ALICE:2021nir} and in p--Pb collisions at the center-of-mass energy of per nucleon pair $\sqrt{s_{\mathrm{NN}}}=5.02$ TeV~\cite{ALICE:2012eyl,ALICE:2013snk}, this article studies the interplay of jet production and collective effects, i.e., short- and long-range correlations simultaneously in high-multiplicity pp collisions at $\sqrt{s} =13$~TeV and in p--Pb collisions $\sqrt{s_{\mathrm{NN}}}=5.02$ TeV. The article also reports flow coefficients extracted for collisions tagged with different event-scale selections. The event-scale selection requires a minimum transverse momentum of the leading particle or the reconstructed jet at midrapidity, which is expected to bias the impact parameter of pp collisions to be smaller on average~\cite{Sjostrand:1986ep,Frankfurt:2003td,Frankfurt:2010ea}. At the same time, the transverse momentum of the leading particle or the reconstructed jet provides a measure of the four-momentum transfer ($Q^2$) in the hard-parton scattering~\cite{Chatrchyan:2012tt, Chatrchyan:2011id}. The transverse-momentum threshold implies a higher $Q^2$ for the collision. Such events with a large $Q^2$ may, on average, have a lower impact parameter than pp events without any requirement on $Q^2$~\cite{Frankfurt:2003td}.
+As an extension of the studies of the near-side long-range ridge and jet-fragmentation yields in pp collisions at the center-of-mass energy $\sqrt{s}=13$ TeV~\cite{ALICE:2021nir} and in p--Pb collisions at the center-of-mass energy of per nucleon pair $\sqrt{s_{\mathrm{NN}}}=5.02$ TeV~\cite{ALICE:2012eyl,ALICE:2013snk}, this article studies the interplay of jet production and collective effects, i.e., short- and long-range correlations simultaneously in high-multiplicity pp collisions at $\sqrt{s} =13$~TeV and in p--Pb collisions $\sqrt{s_{\mathrm{NN}}}=5.02$ TeV. The article also reports flow coefficients extracted for collisions tagged with different event-scale selections. The event-scale selection requires a minimum transverse momentum of the leading particle or the reconstructed jet at midrapidity, which is expected to bias the impact parameter of pp collisions to be smaller on average~\cite{Sjostrand:1986ep,Frankfurt:2003td,Frankfurt:2010ea}. At the same time, the transverse momentum of the leading particle or the reconstructed jet provides a measure of the four-momentum transfer ($Q^2$) in the hard-parton scattering~\cite{Chatrchyan:2012tt, Chatrchyan:2011id,ALICE:2022fnb}. The transverse-momentum threshold implies a higher $Q^2$ for the collision. Such events with a large $Q^2$ may, on average, have a lower impact parameter than pp events without any requirement on $Q^2$~\cite{Frankfurt:2003td}.
 
 This article is organized as follows. First, the experimental setup and analysis method are described in Sec.~\ref{sec:experiment} and Sec.~\ref{sec:ana}, respectively. Section~\ref{sec:uncertainties} discusses the systematic uncertainties. The results and their comparison with model calculations are presented in Sec.~\ref{sec:results}. Finally, the results are summarized in~Sec.~\ref{sec:summary}.
 
